Cloud sync! UI improvements.

--- a/src/sidebar/sidebar.html
+++ b/src/sidebar/sidebar.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Sidebar</title>
+  <title>IPFC Sidebar</title>
   <link rel="stylesheet" href="sidebar.css">
 </head>
-<body>
-    <div id="app">
+
+<body style="position: fixed;
+    width: 100%;
+    height: 100%;">
+  <div id="app">
   </div>
   <script src="sidebar.js"></script>
 </body>
+
 </html>
