added "collect highlight" functionality

--- a/src/highlighter/leftContextMenu.html
+++ b/src/highlighter/leftContextMenu.html
@@ -1,4 +1,7 @@
 <ul id="left-context-ul">
-  <li class="left-context-li" id="delete-highlight">delete highlight</li>
-  <li class="left-context-li" id="collect-highlight">collect highlight</li>
+  <li class="left-context-li" id="delete-highlight">Delete highlight</li>
+  <li class="left-context-li" id="delete-highlight-and-card">Delete highlight and card</li>
+  <li class="left-context-li" id="add-card-to-highlight">Add a new card to this highlight</li>
+  <li class="left-context-li" id="collect-highlight">Collect highlight</li>
+  <li class="left-context-li" id="collect-highlight-and-card">Collect highlight and card</li>
 </ul>
